--- a/trunk/main.bib
+++ b/trunk/main.bib
@@ -3,11 +3,12 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+ 
 @mastersthesis{Mehta,
-author="N. Mehta",
-title="A Flexible Machine Interface",
-school="University of Toronto",
-year="1982"
+ author="N. Mehta",
+ title="A Flexible Machine Interface",
+ school="University of Toronto",
+ year="1982"
 }
 
 @article{LBS,
@@ -28,3 +29,121 @@ year="1982"
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+
+@misc{iOS,
+  title = {Apple i{OS} {D}eveloper {L}ibrary},
+  howpublished = {https://developer.apple.com/library/ios/},
+}
+
+@misc{Android,
+  title = {Android {SDK}},
+  howpublished = {https://developer.android.com/sdk/index.html?hl=sk},
+}
+
+@misc{ActionScript,
+  title = {Action{S}cript 3.0},
+  howpublished={http://help.adobe.com/en\_US/FlashPlatform/reference/actionscript/3/index.html},
+}
+
+@misc{JavaScript,
+  title = {Java{S}cript},
+  howpublished = {http://www.w3.org/standards/webdesign/script},
+}
+
+@book{Gamma,
+ author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
+ title = {Design Patterns: Elements of Reusable Object-oriented Software},
+ year = {1995},
+ isbn = {0-201-63361-2},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
+
+@misc{Codea,
+  title = {Codea},
+  howpublished = {http://twolivesleft.com/Codea/},
+}
+
+@book{AppInventor,
+author = {Wolber, David and Abelson, Hal and Spertus, Ellen and Looney, Liz},
+title = {App {I}nventor for {A}ndroid: {C}reate {Y}our {O}wn {A}ndroid {A}pps},
+publisher = {O'Reilly},
+year = {2011},
+}
+
+@inproceedings{Parent,
+    author  = {Parent, S.},
+    title   = {A Possible Future of Software Development},
+    publisher = {Adobe Software Technology Lab},
+    year    = {2006},
+    note = {http://stlab.adobe.com/wiki/images/0/0c/Possible\_future.pdf},
+}
+
+
+@article{vanderPloeg,
+ author = {van der Ploeg, Atze},
+ title = {Monadic {F}unctional {R}eactive {P}rogramming},
+ journal = {SIGPLAN Not.},
+ issue_date = {December 2013},
+ volume = {48},
+ number = {12},
+ month = sep,
+ year = {2013},
+ issn = {0362-1340},
+ pages = {117--128},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2578854.2503783},
+ doi = {10.1145/2578854.2503783},
+ acmid = {2503783},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {functional reactive programming, monads},
+} 
+
+@TechReport{Maier,
+   abstract    = {Programming interactive systems by means of the observer
+                 pattern is hard and error-prone yet is still the
+                 implementation standard in many production environments.
+                 We show how to integrate different reactive programming
+                 abstractions into a single framework that help migrate
+                 from observer-based event handling logic to more
+                 declarative implementations. Our central API layer embeds
+                 an extensible higher-order data-flow DSL into our host
+                 language. This embedding is enabled by a continuation
+                 passing style transformation.},
+   affiliation = {EPFL},
+   author      = {Maier, Ingo and Odersky, Martin},
+   details     = {http://infoscience.epfl.ch/record/176887},
+   documenturl = {http://infoscience.epfl.ch/record/176887/files/DeprecatingObservers2012.pdf},
+   keywords    = {reactive programming; data flow; Scala},
+   oai-id      = {oai:infoscience.epfl.ch:176887},
+   oai-set     = {driver},
+   pagecount   = {20},
+   status      = {PUBLISHED},
+   submitter   = {177179; 177179},
+   title       = {Deprecating the {O}bserver {P}attern with {S}cala.React},
+   unit        = {LAMP},
+   year        = 2012
+}
+
+@misc{Elm,
+  title = {Elm},
+  howpublished = {http://elm-lang.org/},
+}
+
+
+@misc{Hopscotch,
+  title = {Hopscotch},
+  howpublished = {https://www.gethopscotch.com/},
+}
+
+@misc{ScratchJr,
+  title = {Scratch{J}r},
+  howpublished = {http://scratchjr.org/},
+}
+
+
+
+
+
